--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ winit = "0.29.15"
 log = "0.4.21"
 env_logger = "0.11.3"
 cfg-if = "1.0.0"
+bytemuck = { version = "1.15.0", features = ["derive"] }
+glam = { version = "0.25.0", features = ["bytemuck"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 pollster = "0.3.0"
