--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 wgpu = "0.19.3"
 winit = "0.29.15"
+egui = "0.26.2"
+egui-wgpu = "0.26.2"
+egui-winit = { version = "0.26.2", default-features = false }
 log = "0.4.21"
 env_logger = "0.11.3"
 cfg-if = "1.0.0"
@@ -31,4 +34,4 @@ wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
-web-sys = "0.3.69"
+web-sys = { version = "0.3.69", features = ["Window", "Performance"] }
