--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ path = "src/lib.rs"
 name = "point_cloud_lib"
 crate-type = ["cdylib", "rlib"]
 
+workspace = { members = ["point-converter"] }
+
 [dependencies]
 wgpu = "0.19.3"
 winit = "0.29.15"
@@ -24,7 +26,9 @@ log = "0.4.21"
 env_logger = "0.11.3"
 cfg-if = "1.0.0"
 bytemuck = { version = "1.15.0", features = ["derive"] }
-glam = { version = "0.25.0", features = ["bytemuck"] }
+glam = { version = "0.26.0", features = ["bytemuck"] }
+point-converter = { path = "point-converter" }
+las = "0.8.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 pollster = "0.3.0"
