--- a/point-converter/Cargo.toml
+++ b/point-converter/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glam = "0.27.0"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+glam = { version = "0.27.0", features = ["serde"] }
 log = "0.4.21"
 byteorder = "1.5.0"
 caches = "0.2.8"
