--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,15 +28,17 @@ env_logger = "0.11.3"
 cfg-if = "1.0.0"
 bytemuck = { version = "1.15.0", features = ["derive"] }
 glam = { version = "0.27.0", features = ["bytemuck"] }
+flume = "0.11.0"
 point-converter = { path = "point-converter" }
-las = "0.8.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 pollster = "0.3.0"
+rfd = "0.14.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
-web-sys = { version = "0.3.69", features = ["Window", "Performance"] }
+web-sys = { version = "0.3.69", features = ["Window", "Performance", "FileSystemDirectoryHandle"] }
+js-sys = "0.3.69"
