--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ cfg-if = "1.0.0"
 bytemuck = { version = "1.15.0", features = ["derive"] }
 glam = { version = "0.27.0", features = ["bytemuck"] }
 flume = "0.11.0"
+itertools = "0.12.1"
+caches = "0.2.8"
+rustc-hash = "1.1.0"
 point-converter = { path = "point-converter" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
