--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ itertools = "0.12.1"
 caches = "0.2.8"
 rustc-hash = "1.1.0"
 thousands = "0.2.0"
+bytesize = "1.3.0"
 point-converter = { path = "point-converter" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
