--- a/Makefile.toml
+++ b/Makefile.toml
@@ -29,6 +29,7 @@ args = [
 [tasks.web]
 env = { "RUSTFLAGS" = "--cfg=web_sys_unstable_apis" }
 command = "wasm-pack"
+install_crate = { crate_name = "wasm-pack", binary = "wasm-pack", test_arg = "--help" }
 args = [
     "build",
     "--target", "web",
