--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,14 @@ winit = "0.29.15"
 egui = "0.27.0"
 egui-wgpu = "0.27.0"
 egui-winit = { version = "0.27.0", default-features = false }
-bevy_app = "0.13.0"
-bevy_ecs = "0.13.0"
+bevy_app = "0.13.2"
+bevy_ecs = "0.13.2"
+bevy_time = "0.13.2"
+bevy_input = "0.13.2"
+bevy_window = "0.13.2"
+bevy_a11y = "0.13.2"
+bevy_winit = "0.13.2"
+bevy_egui = { version = "0.27.0", default-features = false }
 log = "0.4.21"
 env_logger = "0.11.3"
 cfg-if = "1.0.0"
