--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = ["point-converter"]
 [dependencies]
 wgpu = "0.19.3"
 winit = "0.29.15"
+web-time = "1.1.0"
 egui = "0.27.0"
 egui-wgpu = "0.27.0"
 egui-winit = { version = "0.27.0", default-features = false }
