--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,5 +48,5 @@ wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
-web-sys = { version = "0.3.69", features = ["Window", "Performance", "FileSystemDirectoryHandle"] }
+web-sys = { version = "0.3.69", features = ["Window", "Performance", "FileSystemDirectoryHandle", "FileSystemFileHandle", "File"] }
 js-sys = "0.3.69"
