--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ cfg-if = "1.0.0"
 bytemuck = { version = "1.15.0", features = ["derive"] }
 glam = { version = "0.27.0", features = ["bytemuck"] }
 flume = "0.11.0"
+parking_lot = "0.12.2"
 itertools = "0.12.1"
 caches = "0.2.8"
 rustc-hash = "1.1.0"
