--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ name = "point_cloud_lib"
 crate-type = ["cdylib", "rlib"]
 
 [workspace]
-members = ["point-converter", "thread-pool"]
+members = ["bounding-volume", "point-converter", "thread-pool"]
 
 [dependencies]
 wgpu = "0.19.3"
@@ -38,6 +38,7 @@ caches = "0.2.8"
 rustc-hash = "1.1.0"
 thousands = "0.2.0"
 bytesize = "1.3.0"
+bounding-volume = { path = "bounding-volume" }
 thread-pool = { path = "thread-pool" }
 point-converter = { path = "point-converter" }
 
