--- a/point-converter/Cargo.toml
+++ b/point-converter/Cargo.toml
@@ -27,3 +27,4 @@ clap = { version = "4.5.4", features = ["derive"] }
 clap_derive = "4.5.4"
 las = { version = "0.8.3", features = ["laz"] }
 ply-rs = "0.1.3"
+bounding-volume = { path = "../bounding-volume" }
