--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ egui-wgpu = "0.27.0"
 egui-winit = { version = "0.27.0", default-features = false }
 bevy_app = "0.13.2"
 bevy_ecs = "0.13.2"
+bevy_time = "0.13.2"
 log = "0.4.21"
 env_logger = "0.11.3"
 cfg-if = "1.0.0"
