--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,15 @@ members = ["bounding-volume", "point-converter", "thread-pool"]
 [dependencies]
 wgpu = "0.19.3"
 winit = "0.29.15"
-web-time = "1.1.0"
 egui = "0.27.0"
 egui-wgpu = "0.27.0"
 egui-winit = { version = "0.27.0", default-features = false }
 bevy_app = "0.13.2"
 bevy_ecs = "0.13.2"
+bevy_core = "0.13.2"
 bevy_time = "0.13.2"
+bevy_diagnostic = "0.13.2"
+bevy_easings = "0.13.1"
 log = "0.4.21"
 env_logger = "0.11.3"
 cfg-if = "1.0.0"
