Update to bevy 14

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,10 @@ web-time = "1.1.0"
 egui = "0.27.0"
 egui-wgpu = "0.27.0"
 egui-winit = { version = "0.27.0", default-features = false }
-bevy_app = "0.13.2"
-bevy_ecs = "0.13.2"
-bevy_time = "0.13.2"
+bevy_app = "0.14.0"
+bevy_ecs = "0.14.0"
+bevy_state = "0.14.0"
+bevy_time = "0.14.0"
 log = "0.4.21"
 env_logger = "0.11.3"
 cfg-if = "1.0.0"
