--- a/thread-pool/Cargo.toml
+++ b/thread-pool/Cargo.toml
@@ -16,3 +16,8 @@ pollster = "0.3.0"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
+futures = "0.3.30"
+console_error_panic_hook = "0.1.7"
+console_log = "1.0.0"
+web-sys = { version = "0.3.69", features = ["Worker", "WorkerType", "WorkerOptions", "MessageEvent", "Blob", "Url"] }
+js-sys = "0.3.69"
